--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
+    "broccoli-merge-trees": "^3.0.2",
+    "broccoli-stew": "^3.0.0",
+    "broccoli-writer": "^0.1.1",
     "ember-cli": "~3.10.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
@@ -36,6 +39,7 @@
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
+    "ember-elsewhere": "^1.1.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
@@ -46,6 +50,7 @@
     "ember-try": "^1.0.0",
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
+    "fs-extra": "^8.1.0",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.8.4"
   },
